--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -9,7 +9,7 @@
   </div>
   <button class="my-3" type="submit">Submit</button>
   <button type="button" data-bs-toggle="modal" data-bs-target="#signUpModal">
-    Not piece inventory yet? Click Here to Create an Account!
+    No pieces in your inventory yet? Click Here to Create an Account!
   </button>
 </form>
 
