--- a/views/partials/dashboard.handlebars
+++ b/views/partials/dashboard.handlebars
@@ -1,19 +1,19 @@
 <section class="w-100">
 <h2 class="text-center display-4">Your Review Board</h2>
-{{#if comments.length}}
+{{!-- {{#if comments.length}} --}}
   <div class="container">
   <div class="post-list row">
-    {{#each comments as |comment|}}
-      {{> movie-card comment}}
-    {{/each}}
+    {{!-- {{#each comments as |comment|}} --}}
+    {{!-- {{> movie-card  comment}} --}}
+    {{!-- {{/each}} --}}
     </div>
   </div>
 </section>
-{{else}}
+{{!-- {{else}} --}}
 <div class="text-center w-100">
 <h3>You Have No Sets Yet</h3>
 <h4>hit search below to get started</h4>
 <button onclick="location.href='/search'" type="button">Click Here to Search</button>
 </div>
-{{/if}}
+{{!-- {{/if}} --}}
 
